--- a/Personality_Prediction_Using_ML.ipynb
+++ b/Personality_Prediction_Using_ML.ipynb
@@ -50,7 +50,16 @@
         "id": "gfK5vh6vZhDt"
       },
       "outputs": [],
-      "source": []
+      "source": [
+        "# Importing important libraries\n",
+        "import numpy as np\n",
+        "import pandas as pd\n",
+        "import seaborn as sns\n",
+        "import matplotlib.pyplot as plt\n",
+        "\n",
+        "import warnings\n",
+        "warnings.filterwarnings('ignore')"
+      ]
     }
   ]
 }
