--- a/Personality_Prediction_Using_ML.ipynb
+++ b/Personality_Prediction_Using_ML.ipynb
@@ -785,6 +785,35 @@
     {
       "cell_type": "code",
       "source": [
+        "df.columns"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "CG-NxEiHkwj4",
+        "outputId": "2b9b154a-ae6c-4b07-a9d5-2e310f35ec78"
+      },
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "Index(['Time_spent_Alone', 'Stage_fear', 'Social_event_attendance',\n",
+              "       'Going_outside', 'Drained_after_socializing', 'Friends_circle_size',\n",
+              "       'Post_frequency', 'Personality'],\n",
+              "      dtype='object')"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 14
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "df.info()"
       ],
       "metadata": {
@@ -815,6 +844,56 @@
             " 7   Personality                4872 non-null   object\n",
             "dtypes: int64(5), object(3)\n",
             "memory usage: 342.6+ KB\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# checking for dupicates and null values\n",
+        "print(\"Before Removing Duplicates: \",df.duplicated().sum(),\" : \", df.shape)\n",
+        "df.drop_duplicates(inplace=True)\n",
+        "print(\"After Removing Duplicates: \",df.duplicated().sum(), \" : \",df.shape)"
+      ],
+      "metadata": {
+        "id": "ZRoIc6wEd45i",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "b8314337-50d2-4434-c4ec-08622002ee73"
+      },
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Before Removing Duplicates:  128 (5000, 8)\n",
+            "After Removing Duplicates:  0 (4872, 8)\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(df.isnull().sum().sum())"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "-3j6MzaijhEt",
+        "outputId": "ffc9f28d-70ce-492e-be79-4b0f5d9edacd"
+      },
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "0\n"
           ]
         }
       ]
@@ -1156,74 +1235,21 @@
       ]
     },
     {
-      "cell_type": "code",
-      "source": [
-        "# checking for dupicates and null values\n",
-        "print(\"Before Removing Duplicates: \",df.duplicated().sum(),\" : \", df.shape)\n",
-        "df.drop_duplicates(inplace=True)\n",
-        "print(\"After Removing Duplicates: \",df.duplicated().sum(), \" : \",df.shape)"
-      ],
-      "metadata": {
-        "id": "ZRoIc6wEd45i",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "b8314337-50d2-4434-c4ec-08622002ee73"
-      },
-      "execution_count": 7,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Before Removing Duplicates:  128 (5000, 8)\n",
-            "After Removing Duplicates:  0 (4872, 8)\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "print(df.isnull().sum().sum())"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "-3j6MzaijhEt",
-        "outputId": "ffc9f28d-70ce-492e-be79-4b0f5d9edacd"
-      },
-      "execution_count": 10,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "0\n"
-          ]
-        }
-      ]
-    },
-    {
       "cell_type": "markdown",
       "source": [
         "**Basic Summary:**\n",
         "\n",
-        "* Total data points"
+        "* Total number of data points are: (Rows = 5000, columns = 8)\n",
+        "* These are the columns we will be working with: ['Time_spent_Alone', 'Stage_fear', 'Social_event_attendance',\n",
+        "       'Going_outside', 'Drained_after_socializing', 'Friends_circle_size',\n",
+        "       'Post_frequency', 'Personality']\n",
+        "* We have a total of 5 numerical columns and 3 categorical columns.\n",
+        "* There were quite a few number of duplicated rows, we handled them.\n",
+        "* Fortunately we don't have any null values in any columns."
       ],
       "metadata": {
         "id": "Eb-zj9E6kSta"
       }
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "B3K1HDz2kLSA"
-      },
-      "execution_count": null,
-      "outputs": []
     }
   ]
 }
