--- a/Personality_Prediction_Using_ML.ipynb
+++ b/Personality_Prediction_Using_ML.ipynb
@@ -1903,7 +1903,9 @@
     {
       "cell_type": "markdown",
       "source": [
-        "* Here we can see a sample of target column afte"
+        "* Here we can see a sample of target column after transforming it and their relative classes.\n",
+        "* It goes like Extrovert -> 0 and Introvert -> 1\n",
+        "* Now our data is ready for model building."
       ],
       "metadata": {
         "id": "RO2xhhhD2FUV"
