--- a/Personality_Prediction_Using_ML.ipynb
+++ b/Personality_Prediction_Using_ML.ipynb
@@ -1913,9 +1913,110 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "# Feature Selectiong\n",
+        "X =  df.drop(\"Personality\", axis=1)\n",
+        "Y = df['Personality']\n",
+        "X.shape, Y.shape"
+      ],
       "metadata": {
-        "id": "dqQjap3W143G"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "dqQjap3W143G",
+        "outputId": "117a837a-e703-4130-ab07-32307c8483f6"
+      },
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "((4872, 9), (4872,))"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 20
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Splitting the data for training and testing\n",
+        "from sklearn.model_selection import train_test_split\n",
+        "\n",
+        "x_train, x_test, y_train, y_test = train_test_split(X, Y, test_size=0.2, random_state=45)\n",
+        "x_train.shape, x_test.shape, y_train.shape, y_test.shape\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "JU5qnGPX4Lxp",
+        "outputId": "35121cb1-e496-4525-87ab-0f25f096fb8b"
+      },
+      "execution_count": 21,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "((3897, 9), (975, 9), (3897,), (975,))"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 21
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Now we have successfully splitted the data for training and testing purpose along with proper features and target column."
+      ],
+      "metadata": {
+        "id": "jdwbNP114prD"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# (Optional): Imagine yourself in a position not able to utilize sklearn for some reason, how will you split the data for training and testing?\n",
+        "split = int((len(df)*.8))\n",
+        "\n",
+        "train_data = df.sample(split, random_state=45)\n",
+        "test_data = df.drop(train_data.index)\n",
+        "train_data.shape, test_data.shape"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "8_IkZU_m4oL_",
+        "outputId": "2cc2a489-9d69-4b44-caa5-d22c4e673c6a"
+      },
+      "execution_count": 29,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "((3897, 10), (975, 10))"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 29
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "train"
+      ],
+      "metadata": {
+        "id": "J4ptGi-y8mwo"
       },
       "execution_count": null,
       "outputs": []
