--- a/Personality_Prediction_Using_ML.ipynb
+++ b/Personality_Prediction_Using_ML.ipynb
@@ -45,7 +45,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "id": "gfK5vh6vZhDt"
       },
@@ -56,6 +56,21 @@
         "import pandas as pd\n",
         "import seaborn as sns\n",
         "import matplotlib.pyplot as plt\n",
+        "\n",
+        "from sklearn.preprocessing import LabelEncoder\n",
+        "from sklearn.preprocessing import OneHotEncoder\n",
+        "from sklearn.model_selection import train_test_split\n",
+        "from sklearn.preprocessing import StandardScaler\n",
+        "from sklearn.metrics import (\n",
+        "    classification_report, confusion_matrix, ConfusionMatrixDisplay,\n",
+        "    accuracy_score, precision_score, recall_score\n",
+        ")\n",
+        "from sklearn.linear_model import LogisticRegression, LogisticRegressionCV\n",
+        "from sklearn.linear_model import SGDClassifier\n",
+        "from sklearn.svm import LinearSVC\n",
+        "from sklearn.svm import SVC\n",
+        "\n",
+        "\n",
         "\n",
         "import warnings\n",
         "warnings.filterwarnings('ignore')"
@@ -74,7 +89,7 @@
         "id": "EwHk8CGjdfMt",
         "outputId": "c6598c2a-18c7-4097-91a6-fa9a367fb931"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -101,7 +116,7 @@
         "id": "OaCCCpXPd2Wh",
         "outputId": "2f14e20e-51f6-4434-c7ac-8298acc9a76a"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -445,7 +460,7 @@
         "id": "d4Mm0yjPd3j7",
         "outputId": "2fee5d8a-a2de-4b61-8576-6e0ffb7cb5f7"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -794,7 +809,7 @@
         "id": "CG-NxEiHkwj4",
         "outputId": "83c037a0-c05c-46c9-8a09-390eb774a502"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -823,7 +838,7 @@
         "id": "Ip-AqKIwkEqR",
         "outputId": "65a8468b-eddc-495f-aec2-62811556d90d"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -863,7 +878,7 @@
         },
         "outputId": "5e870bae-be14-4ddc-c921-08a9124cfa35"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -887,7 +902,7 @@
         "id": "-3j6MzaijhEt",
         "outputId": "71588d6b-ae19-400c-8d79-041e2c5d3594"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -911,7 +926,7 @@
         "id": "3r-qQrAikN5x",
         "outputId": "92792050-4ab9-43ac-a401-c500507e175f"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1271,7 +1286,7 @@
         "id": "hNQToxsKldJw",
         "outputId": "8cdef47b-eef9-4ca3-dfc2-f3c86ef1e842"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1301,7 +1316,7 @@
         },
         "outputId": "f3bcfbc8-8d2d-4f8c-9e15-6500fd1bc0a5"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1331,7 +1346,7 @@
         "id": "MHZ1NExIuxFI",
         "outputId": "a519ea55-170f-485f-bb79-0d94dc3b42ae"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1361,7 +1376,7 @@
         "id": "6Y4vo29cw-wF",
         "outputId": "fada3928-7ba9-4257-c96f-bb6a6f50e98e"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1404,7 +1419,7 @@
         "id": "ezww0IOyxr_1",
         "outputId": "4dee4c17-7796-43a7-de10-44ac4b08bd33"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1450,7 +1465,7 @@
         },
         "outputId": "facd73ea-8b8e-45d3-c9d3-c10be0ecfa00"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1819,7 +1834,7 @@
         "id": "5KWOKZ7QyUAG",
         "outputId": "b653e336-adf2-486d-bb11-23b28afb454d"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1867,7 +1882,7 @@
       "metadata": {
         "id": "vnChJXy71Gjw"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1883,7 +1898,7 @@
         "id": "4HDuykFp1l5I",
         "outputId": "fc0cbaa3-8253-461a-f1db-421ef7bc1718"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1926,7 +1941,7 @@
         "id": "dqQjap3W143G",
         "outputId": "a9daee04-4fd5-4f19-a379-213360d0a1cc"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1952,7 +1967,7 @@
       "metadata": {
         "id": "JU5qnGPX4Lxp"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1981,7 +1996,7 @@
         "id": "8_IkZU_m4oL_",
         "outputId": "2e40e1ab-dfe9-4bfd-a677-6445f7499527"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2011,7 +2026,7 @@
         "id": "J4ptGi-y8mwo",
         "outputId": "71657eb9-266f-4d58-cc4e-82da410d21d7"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2039,7 +2054,7 @@
         "id": "uFDGukLeraMx",
         "outputId": "fa9082a2-fbe3-492b-ae43-f35e3f2d5582"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2066,7 +2081,7 @@
         "id": "IdZBz4bTtNfS",
         "outputId": "b309aed9-d1c8-4b8f-b06b-c0636a44c8a9"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2423,7 +2438,7 @@
         "id": "svuN0MaatPDc",
         "outputId": "e4e37ddf-2ebb-4215-ecad-6765ad698d7e"
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2511,7 +2526,7 @@
       "metadata": {
         "id": "op3fUcLXtSb0"
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2574,7 +2589,7 @@
       "metadata": {
         "id": "22vLFvimEVHq"
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2603,7 +2618,7 @@
         "id": "H92Lm2sLC1sv",
         "outputId": "9baf5750-7b01-4e5f-d47a-35aedb860689"
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2660,7 +2675,7 @@
         "id": "E2t9BiF6QxOO",
         "outputId": "7f6fae51-93f4-4a76-dc48-e8c74b314ac8"
       },
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2688,7 +2703,7 @@
         "id": "fGHEmkiXGaL-",
         "outputId": "a3047f6e-1035-4910-ca80-c69fe65852fc"
       },
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2735,7 +2750,7 @@
         },
         "outputId": "357d9ca5-37fa-47c1-9948-a8e844e97c31"
       },
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2763,7 +2778,7 @@
         "id": "dizIZ8ylk6F3",
         "outputId": "ebfeeaf5-f60c-447a-9e31-f9614010f7ab"
       },
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2810,7 +2825,7 @@
         "id": "XujNqTFNld5k",
         "outputId": "fa0b9fa0-620c-4adf-dfe7-713c51a66f26"
       },
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2847,7 +2862,7 @@
         "id": "x60XpGceTRjV",
         "outputId": "304a7598-51f4-494a-a69f-ea366bde2b4d"
       },
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2894,7 +2909,7 @@
         "id": "eB82DVlGwaNO",
         "outputId": "b528c989-9795-4617-c5de-7b62beac8da6"
       },
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2922,7 +2937,7 @@
         "id": "Zu0DsX-UQ5UB",
         "outputId": "2e1926f0-4633-4362-bf0b-20d7b29dc191"
       },
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2978,7 +2993,7 @@
         "id": "R9btLBBXwlGQ",
         "outputId": "5bc09d1c-b8d8-4236-f43f-698706292d44"
       },
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3022,7 +3037,7 @@
         "id": "i9VXMIt3qjZp",
         "outputId": "2118a94d-80f3-433e-9b0f-4b869be575de"
       },
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3069,7 +3084,7 @@
         },
         "outputId": "39d45750-5507-4dab-fa56-285bcea2473c"
       },
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3106,7 +3121,7 @@
         "id": "F3DoZrJ5ZeZB",
         "outputId": "966a21bf-fdd6-4e3c-badb-1862c2788d39"
       },
-      "execution_count": 41,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3162,7 +3177,7 @@
         "id": "TosDIEpKw1kZ",
         "outputId": "51978446-ae84-4722-82bc-8f8b41fa29bb"
       },
-      "execution_count": 42,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3199,7 +3214,7 @@
         "id": "86XVvq6XZd8R",
         "outputId": "8cb5e2f5-7b07-4cf9-93ed-ee50c997d76c"
       },
-      "execution_count": 43,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3246,7 +3261,7 @@
         "id": "vsDPEQhdxIGm",
         "outputId": "4752c146-7274-4b6a-cc9a-f70502afb465"
       },
-      "execution_count": 44,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3292,7 +3307,7 @@
         "id": "pt96dF5BcAko",
         "outputId": "bd9609fa-eaa5-4d14-d8c1-c8fdf12cf0a4"
       },
-      "execution_count": 45,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3339,7 +3354,7 @@
         "id": "dDm-JMGPxS9c",
         "outputId": "201e29fe-5275-4632-e88e-ed8be5bce867"
       },
-      "execution_count": 46,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3376,7 +3391,7 @@
         "id": "p0HyYBYXmfcP",
         "outputId": "e427dfba-9621-40ac-a00e-528c3d1594df"
       },
-      "execution_count": 47,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3423,7 +3438,7 @@
         "id": "xMUJxZPjxcD-",
         "outputId": "d5ee39ab-9d4f-4e5c-9e9f-6f20c3c0588e"
       },
-      "execution_count": 48,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3460,7 +3475,7 @@
         "id": "cdqcYifcnuLV",
         "outputId": "bb239982-99f3-4366-9ddf-c70db6a8f206"
       },
-      "execution_count": 49,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3507,7 +3522,7 @@
         "id": "VQV_rUyHxow_",
         "outputId": "88ebfa96-29a3-432c-9d51-6caec94cb3f9"
       },
-      "execution_count": 50,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3517,6 +3532,22 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from sklearn.neighbors import KNeighborsClassifier\n",
+        "from sklearn.tree import DecisionTreeClassifier\n",
+        "from sklearn.ensemble import RandomForestClassifier\n",
+        "from sklearn.ensemble import ExtraTreesClassifier\n",
+        "from sklearn.ensemble import GradientBoostingClassifier\n",
+        "from sklearn.ensemble import HistGradientBoostingClassifier"
+      ],
+      "metadata": {
+        "id": "m45cApTsJ1ik"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -3544,7 +3575,7 @@
         "id": "fRCDecPevhGO",
         "outputId": "9ddcbd60-67a5-40b8-fb2f-5711ce09ac1c"
       },
-      "execution_count": 51,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3591,7 +3622,7 @@
         "id": "ZrnuMNFkvhEE",
         "outputId": "6b5efb49-fd81-4bdd-d88e-7eb69d8acf0e"
       },
-      "execution_count": 52,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3620,7 +3651,7 @@
         "id": "sb5E3epLyjwa",
         "outputId": "e3356e8e-c7ef-46e6-c31b-678ce9a26108"
       },
-      "execution_count": 53,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3673,7 +3704,7 @@
         "id": "Ah1BLV6Mzd6v",
         "outputId": "fcbcac1f-c6bd-42f4-851a-8d43586ed716"
       },
-      "execution_count": 54,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3726,7 +3757,7 @@
         "id": "ruGlBhy3zzho",
         "outputId": "e5b1e9a6-12f7-495a-f7bb-ea94b55d0c45"
       },
-      "execution_count": 55,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3778,7 +3809,7 @@
         "id": "gUmp_gnp2-9B",
         "outputId": "f71c5517-6225-4f03-ad26-b1a72142b636"
       },
-      "execution_count": 56,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3825,7 +3856,7 @@
         "id": "ssH1t7pY3Pkh",
         "outputId": "12cd74cd-577c-452b-b499-acf756d36026"
       },
-      "execution_count": 57,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3850,7 +3881,7 @@
         "id": "u6M4YMJj3u8f",
         "outputId": "2c51f186-42f1-4247-cd86-b045ab708964"
       },
-      "execution_count": 58,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4293,7 +4324,7 @@
         "id": "AlUTWxFs2Lf1",
         "outputId": "8a8c0506-03e4-4e2a-c62d-76fa4211f9ac"
       },
-      "execution_count": 72,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -4324,7 +4355,7 @@
         "id": "wJIErh_W3XDb",
         "outputId": "b9096cef-b3f6-47bc-f570-39cf07c8f6e4"
       },
-      "execution_count": 71,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -4355,7 +4386,7 @@
         "id": "GU5S1oUR36HH",
         "outputId": "32645a1c-bb78-45d1-e44d-d3d1e0bcab88"
       },
-      "execution_count": 74,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -4381,7 +4412,7 @@
         "id": "Yw1sd166uSK1",
         "outputId": "92b196f8-2b0e-4967-f4b6-8a07ea39d808"
       },
-      "execution_count": 67,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4410,7 +4441,7 @@
         "id": "jFJOfUZAut9u",
         "outputId": "a04dec32-de2c-45a0-b7c4-256c1c4cc2a4"
       },
-      "execution_count": 68,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4436,7 +4467,7 @@
         "id": "RA7ptN1tu9Cg",
         "outputId": "4c072916-a2c4-4c60-fd09-c49bc1035e85"
       },
-      "execution_count": 69,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
