--- a/Personality_Prediction_Using_ML.ipynb
+++ b/Personality_Prediction_Using_ML.ipynb
@@ -69,8 +69,15 @@
         "from sklearn.linear_model import SGDClassifier\n",
         "from sklearn.svm import LinearSVC\n",
         "from sklearn.svm import SVC\n",
-        "\n",
-        "\n",
+        "from sklearn.naive_bayes import GaussianNB\n",
+        "from sklearn.neighbors import KNeighborsClassifier\n",
+        "from sklearn.tree import DecisionTreeClassifier\n",
+        "from sklearn.ensemble import RandomForestClassifier\n",
+        "from sklearn.ensemble import ExtraTreesClassifier\n",
+        "from sklearn.ensemble import GradientBoostingClassifier\n",
+        "from sklearn.ensemble import HistGradientBoostingClassifier\n",
+        "from sklearn.ensemble import BaggingClassifier\n",
+        "from sklearn.ensemble import AdaBoostClassifier\n",
         "\n",
         "import warnings\n",
         "warnings.filterwarnings('ignore')"
@@ -3532,22 +3539,6 @@
           ]
         }
       ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "from sklearn.neighbors import KNeighborsClassifier\n",
-        "from sklearn.tree import DecisionTreeClassifier\n",
-        "from sklearn.ensemble import RandomForestClassifier\n",
-        "from sklearn.ensemble import ExtraTreesClassifier\n",
-        "from sklearn.ensemble import GradientBoostingClassifier\n",
-        "from sklearn.ensemble import HistGradientBoostingClassifier"
-      ],
-      "metadata": {
-        "id": "m45cApTsJ1ik"
-      },
-      "execution_count": null,
-      "outputs": []
     },
     {
       "cell_type": "markdown",
